mobile footer add

--- a/index.html
+++ b/index.html
@@ -2601,7 +2601,7 @@
           <div class="l-side flex flex-col gap-[15vw] md:gap-[3.333vw]">
             <!-- div 1 -->
             <div
-              class="mx-[10vw] md:mx-0 flex gap-[0.469vw] justify-center items-center"
+              class="mx-[10vw] md:mx-0 flex gap-[2.326vw] md:gap-[0.469vw] justify-center items-start"
             >
               <div
                 class="w-[43.953vw] p-[3.488vw] md:p-0 aspect-[1/1] md:h-[7.5vw] md:w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
@@ -2626,7 +2626,7 @@
             <!-- div 1 -->
             <!-- div 1 -->
             <div
-              class="mx-[10vw] md:mx-0 flex gap-[0.469vw] justify-center items-center"
+              class="mx-[10vw] md:mx-0 flex gap-[2.326vw] md:gap-[0.469vw] justify-center items-start"
             >
               <div
                 class="w-[43.953vw] p-[3.488vw] md:p-0 aspect-[1/1] md:h-[7.5vw] md:w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
@@ -2637,21 +2637,23 @@
                 <h3
                   class="md:text-[1.563vw] text-[4.186vw] font-normal lg:leading-9 md:leading-6 tracking-normal text-left choose_head_text"
                 >
-                  Expert Team
+                  Budget-Friendly Solutions
                 </h3>
 
                 <p
                   class="md:text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left text-[2.791vw] md:w-[20.833vw]"
                 >
-                  Our team comprises seasoned professionals with a wealth of
-                  experience. From skilled craftsmen to creative designers.
+                  we understand the importance of staying within budget without
+                  sacrificing quality. Our commitment to budget-friendly
+                  solutions ensures that your dream home remains both
+                  spectacular and financially sensible
                 </p>
               </div>
             </div>
             <!-- div 1 -->
             <!-- div 1 -->
             <div
-              class="mx-[10vw] md:mx-0 flex gap-[0.469vw] justify-center items-center"
+              class="mx-[10vw] md:mx-0 flex gap-[2.326vw] md:gap-[0.469vw] justify-center items-start"
             >
               <div
                 class="w-[43.953vw] p-[3.488vw] md:p-0 aspect-[1/1] md:h-[7.5vw] md:w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
@@ -2662,14 +2664,68 @@
                 <h3
                   class="md:text-[1.563vw] text-[4.186vw] font-normal lg:leading-9 md:leading-6 tracking-normal text-left choose_head_text"
                 >
-                  Expert Team
+                  Timely Delivery
                 </h3>
 
                 <p
                   class="md:text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left text-[2.791vw] md:w-[20.833vw]"
                 >
-                  Our team comprises seasoned professionals with a wealth of
-                  experience. From skilled craftsmen to creative designers.
+                  We value your time as much as you do. With Renoexpert, expect
+                  not just a beautifully renovated space, but also timely
+                  project delivery.
+                </p>
+              </div>
+            </div>
+            <!-- div 1 -->
+            <!-- div 1 -->
+            <div
+              class="mx-[10vw] md:mx-0 flex gap-[2.326vw] md:gap-[0.469vw] justify-center items-start md:hidden"
+            >
+              <div
+                class="w-[43.953vw] p-[3.488vw] md:p-0 aspect-[1/1] md:h-[7.5vw] md:w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
+              >
+                <img class="img-fluid" src="./asset/img/team.png" alt="team" />
+              </div>
+              <div>
+                <h3
+                  class="md:text-[1.563vw] text-[4.186vw] font-normal lg:leading-9 md:leading-6 tracking-normal text-left choose_head_text"
+                >
+                  Quality Craftsmanship
+                </h3>
+
+                <p
+                  class="md:text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left text-[2.791vw] md:w-[20.833vw]"
+                >
+                  Quality is at the core of everything we do. We use premium
+                  materials and employ meticulous craftsmanship to ensure the
+                  longevity, functionality, and beauty of your renovated space.
+                </p>
+              </div>
+            </div>
+            <!-- div 1 -->
+            <!-- div 1 -->
+            <div
+              class="mx-[10vw] md:mx-0 flex gap-[2.326vw] md:gap-[0.469vw] justify-center items-start md:hidden"
+            >
+              <div
+                class="w-[43.953vw] p-[3.488vw] md:p-0 aspect-[1/1] md:h-[7.5vw] md:w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
+              >
+                <img class="img-fluid" src="./asset/img/team.png" alt="team" />
+              </div>
+              <div>
+                <h3
+                  class="md:text-[1.563vw] text-[4.186vw] font-normal lg:leading-9 md:leading-6 tracking-normal text-left choose_head_text"
+                >
+                  Client-Centric Focus
+                </h3>
+
+                <p
+                  class="md:text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left text-[2.791vw] md:w-[20.833vw]"
+                >
+                  Our clients are at the heart of our mission. We go the extra
+                  mile to ensure your satisfaction, building lasting
+                  relationships that extend beyond the completion of the
+                  project.
                 </p>
               </div>
             </div>
@@ -2917,7 +2973,7 @@
             </div>
             <div>
               <a
-                class="bg-[#FF6D43] py[14.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] leading-[4.651vw] rounded-full cursor-pointer flex items-center md:w-[39.063vw] mx-[10.233vw] md:mx-0"
+                class="bg-[#FF6D43] py[14.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] leading-[4.651vw] rounded-full cursor-pointer flex items-center md:w-[39.063vw] mx-[10.233vw] md:mx-0 h-[12.791vw] md:h-[2.865vw]"
               >
                 <span>Drop a message</span>
 
@@ -2942,7 +2998,7 @@
       <!-- contact us section end -->
 
       <!-- footer section start  -->
-      <footer class="bg-black w-full box-border pt-[3.333vw]">
+      <footer class="bg-black w-full box-border pt-[3.333vw] hidden md:block">
         <div
           class="grid grid-cols-4 gap-y-[4.167vw] xl:w-[80%] lg:w-[85%] md:w-[95%] mx-auto"
         >
@@ -3068,6 +3124,95 @@
         </div>
       </footer>
       <!-- footer section end -->
+
+      <!-- mobile footer section start -->
+
+      <footer class="bg-black w-full box-border pt-[13.953vw] block md:hidden">
+        <div
+          class="flex flex-col items-center justify-center border-[#BEB8AE] border-b-[0.1rem] pb-[9.535vw]"
+        >
+          <div
+            class="flex items-center border justify-center rounded-full cursor-pointer mb-[8.14vw]"
+          >
+            <img
+              class="img-fluid pl-[5.116vw] py-[3.023vw]"
+              src="/asset/icons/phone-icon.png"
+              alt=""
+            />
+            <span
+              class="text-[#EEECE8] text-[3.256vw] leading-[4.651vw] px-[5.581vw] py-[4.186vw]"
+              >677 644 9115 8246</span
+            >
+          </div>
+
+          <div class="w-full flex justify-center mb-[8.14vw]">
+            <img src="/asset/icons/facebook-icon.png" alt="" />
+            <img class="mx-6" src="/asset/icons/whatsapp-icon.png" alt="" />
+            <img src="/asset/icons/linkedin-icon.png" alt="" />
+          </div>
+
+          <div class="mb-[8.14vw]">
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >Home</a
+            >
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >About</a
+            >
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >Our Accreditation</a
+            >
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >Testimonial</a
+            >
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >Contact Us</a
+            >
+          </div>
+
+          <p
+            class="text-[3.256vw] text-[#EEECE8] text-center leading-[5.116vw]"
+          >
+            M-space, 6D Mandai Estate#03-12, Singapore
+            729938(Office/Showroom/Workshop)
+          </p>
+        </div>
+        <div class="mx-auto py-[9.083vw]">
+          <div class="flex gap-2 items-center text-center justify-center">
+            <a
+              class="text-[#EEECE8] text-[3.256vw] text-center not-italic font-normal leading-[5.581vw]"
+            >
+              Renoexpert.com.sg @ 2024
+            </a>
+          </div>
+
+          <div class="text-center">
+            <span
+              class="text-[#EEECE8] text-[3.256vw] text-center not-italic font-normal leading-[5.581vw]"
+            >
+              All rights reserved
+            </span>
+          </div>
+          <div class="text-center">
+            <span
+              class="text-[#FF6D43] text-[3.256vw] not-italic font-normal leading-[5.581vw]"
+            >
+              Privacy & policy
+            </span>
+          </div>
+        </div>
+      </footer>
+
+      <!-- mobile footer section end -->
     </div>
 
     <!-- javascript file link  -->
