--- a/painting-service.html
+++ b/painting-service.html
@@ -18,24 +18,14 @@
 
   <body>
     <div class="wrapper relative">
-      <div
-        id="dropdown"
-        class="absolute top-[1.175vw] -translate-y-[17.175vw] duration-150 w-full bg-white mt-[4.375vw] z-10 py-6"
-      >
-        <ul class="text-[1.146vw] ml-[35.5vw] hidden md:block">
-          <li><a href="#">Renovation</a></li>
-          <li><a href="#">Renovation</a></li>
-          <li><a href="#">Renovation</a></li>
-          <li><a href="#">Renovation</a></li>
-        </ul>
-      </div>
       <!-- header start  -->
       <header
-        class="header_wrapper aspect-[1840/103] flex items-center w-full box-border bg-[#EEECE8] px-[2.083vw] border-b-[0.1rem] border-[#BEB8AE]"
+        class="header_wrapper aspect-[1840/103] flex items-center w-full box-border bg-[#EEECE8] md:px-[2.083vw] border-b-[0.1rem] border-[#BEB8AE] fixed z-50 hover:bg-white duration-300"
       >
-        <nav class="flex justify-between w-full items-center">
+        <!-- desktop navbar started here  -->
+        <nav class="justify-between w-full items-center hidden md:flex">
           <div class="logo">
-            <a href="#">
+            <a href="/">
               <img
                 class="w-[10.781vw] aspect-[207/40]"
                 src="./asset/img/reno_logo.png"
@@ -46,25 +36,121 @@
           <div class="">
             <ul class="flex gap-6">
               <li class="cursor-pointer service">
-                <a
-                  id="services_menu"
-                  class="text-[#291E18] text-[0.833vw]"
-                  href="#"
-                  >Services
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="10"
-                    height="6"
-                    viewBox="0 0 10 6"
-                    fill="none"
-                    class="inline ml-1"
+                <div class="group inline-block">
+                  <button
+                    class="outline-none focus:outline-none rounded-sm flex items-center"
                   >
-                    <path
-                      d="M5 6L0.669873 1.38009e-07L9.33013 8.95112e-07L5 6Z"
-                      fill="#FF6D43"
-                    />
-                  </svg>
-                </a>
+                    <span class="flex-1 mr-[0.417vw] text-[0.833vw]"
+                      >Services</span
+                    >
+                    <span>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="10"
+                        height="6"
+                        viewBox="0 0 10 6"
+                        fill="none"
+                        class="inline ml-1"
+                      >
+                        <path
+                          d="M5 6L0.669873 1.38009e-07L9.33013 8.95112e-07L5 6Z"
+                          fill="#FF6D43"
+                        ></path>
+                      </svg>
+                    </span>
+                  </button>
+                  <ul
+                    class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32"
+                  >
+                    <li
+                      class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
+                    >
+                      <a href="painting-service.html">Painting</a>
+                    </li>
+                    <li
+                      class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
+                    >
+                      <a href="#">Demolition</a>
+                    </li>
+                    <li
+                      class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
+                    >
+                      <a href="#">Masonary</a>
+                    </li>
+                    <li
+                      class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
+                    >
+                      <a href="#">Flooring</a>
+                    </li>
+                    <li
+                      class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
+                    >
+                      <a href="#">Wall Partition & Ceiling</a>
+                    </li>
+                    <li
+                      class="rounded-sm px-3 py-1 hover:bg-[#a5a39f] text-[1vw]"
+                    >
+                      <a href="#">Electrical & Plumbing</a>
+                    </li>
+                    <!-- <li class="rounded-sm relative px-3 py-1 hover:bg-gray-100">
+                      <button
+                        class="w-full text-left flex items-center outline-none focus:outline-none"
+                      >
+                        <span class="pr-1 flex-1">Langauges</span>
+                        <span class="mr-auto">
+                          <svg
+                            class="fill-current h-4 w-4
+                            transition duration-150 ease-in-out"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 20 20"
+                          >
+                            <path
+                              d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+                            />
+                          </svg>
+                        </span>
+                      </button>
+                      <ul
+                        class="bg-white border rounded-sm absolute top-0 right-0 
+                  transition duration-150 ease-in-out origin-top-left
+                  min-w-32
+                  "
+                      >
+                        <li class="px-3 py-1 hover:bg-gray-100">Javascript</li>
+                        <li class="rounded-sm relative px-3 py-1 hover:bg-gray-100">
+                          <button
+                            class="w-full text-left flex items-center outline-none focus:outline-none"
+                          >
+                            <span class="pr-1 flex-1">Python</span>
+                            <span class="mr-auto">
+                              <svg
+                                class="fill-current h-4 w-4
+                                transition duration-150 ease-in-out"
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 20 20"
+                              >
+                                <path
+                                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+                                />
+                              </svg>
+                            </span>
+                          </button>
+                          <ul
+                            class="bg-white border rounded-sm absolute top-0 right-0 
+                      transition duration-150 ease-in-out origin-top-left
+                      min-w-32
+                      "
+                          >
+                            <li class="px-3 py-1 hover:bg-gray-100">2.7</li>
+                            <li class="px-3 py-1 hover:bg-gray-100">3+</li>
+                          </ul>
+                        </li>
+                        <li class="px-3 py-1 hover:bg-gray-100">Go</li>
+                        <li class="px-3 py-1 hover:bg-gray-100">Rust</li>
+                      </ul>
+                    </li> -->
+                  </ul>
+                </div>
               </li>
               <li class="cursor-pointer">
                 <a class="text-[#291E18] text-[0.833vw]" href="#">About</a>
@@ -101,6 +187,98 @@
             </a>
           </div>
         </nav>
+        <!-- desktop navbar ended here  -->
+
+        <!-- Mobile navbar started  -->
+        <nav class="md:hidden w-[100vw] aspect-[430/77]">
+          <div class="flex items-center justify-between h-full px-[2.083vw]">
+            <a href="/">
+              <img class="w-[33.86vw]" src="asset/img/reno_logo.png" alt="" />
+            </a>
+            <div class="flex items-center">
+              <button id="mobile-nav-toggle-btn">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="39"
+                  height="39"
+                  viewBox="0 0 39 39"
+                  fill="none"
+                >
+                  <circle cx="19.5" cy="19.5" r="19.5" fill="#DBD8D3" />
+                  <line x1="8" y1="13.5" x2="30" y2="13.5" stroke="black" />
+                  <line x1="8" y1="18.5" x2="30" y2="18.5" stroke="black" />
+                  <line x1="8" y1="23.5" x2="30" y2="23.5" stroke="black" />
+                </svg>
+              </button>
+              <span class="ml-[4.186vw]">Menu</span>
+            </div>
+          </div>
+
+          <!-- here started the content -->
+          <div
+            id="mobile-navbar-content"
+            class="absolute bg-white w-full py-4 duration-500 opacity-0"
+          >
+            <ul class="ml-[4vw]">
+              <li>
+                <div class="relative">
+                  <!-- Menu Trigger -->
+                  <button
+                    class="menu-trigger flex items-center justify-between w-full px-4 py-2 text-sm font-medium text-gray-700 bg-gray-100 border border-gray-200 rounded-md focus:outline-none focus:border-blue-500"
+                  >
+                    <span>Menu Item 1</span>
+                    <!-- Icon for indicating open/close state -->
+                    <svg
+                      class="menu-icon w-4 h-4 fill-current"
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        class="closed-icon"
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M20 5.7l-1.5-1.6L12 11.1 5.5 4.1 4 5.7 12 14z"
+                      />
+                      <path
+                        class="open-icon"
+                        style="display: none"
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M20 18.3l-1.5 1.6L12 12.9 5.5 19.9 4 18.3 12 9.7z"
+                      />
+                    </svg>
+                  </button>
+                  <!-- Collapsible Menu Content -->
+                  <div
+                    class="menu-content absolute top-full left-0 w-full bg-white border border-gray-200 rounded-b-md shadow-md overflow-hidden transition-all duration-300 ease-in-out"
+                    style="display: none"
+                  >
+                    <a
+                      href="#"
+                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                      >Submenu Item 1</a
+                    >
+                    <a
+                      href="#"
+                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                      >Submenu Item 2</a
+                    >
+                    <a
+                      href="#"
+                      class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                      >Submenu Item 3</a
+                    >
+                  </div>
+                </div>
+              </li>
+              <li><a class="py-3" href="#">About</a></li>
+              <li><a class="py-3" href="#">Testimonial</a></li>
+              <li><a class="py-3" href="#">Projects</a></li>
+            </ul>
+          </div>
+          <!-- here ended the content  -->
+        </nav>
+        <!-- Mobile navbar ended  -->
       </header>
       <!-- header ends -->
 
@@ -639,7 +817,7 @@
       <!-- contact us section end -->
 
       <!-- footer section start  -->
-      <footer class="bg-black w-full box-border pt-[3.333vw]">
+      <footer class="bg-black w-full box-border pt-[3.333vw] hidden md:block">
         <div
           class="grid grid-cols-4 gap-y-[4.167vw] xl:w-[80%] lg:w-[85%] md:w-[95%] mx-auto"
         >
@@ -765,6 +943,95 @@
         </div>
       </footer>
       <!-- footer section end -->
+
+      <!-- mobile footer section start -->
+
+      <footer class="bg-black w-full box-border pt-[13.953vw] block md:hidden">
+        <div
+          class="flex flex-col items-center justify-center border-[#BEB8AE] border-b-[0.1rem] pb-[9.535vw]"
+        >
+          <div
+            class="flex items-center border justify-center rounded-full cursor-pointer mb-[8.14vw]"
+          >
+            <img
+              class="img-fluid pl-[5.116vw] py-[3.023vw]"
+              src="/asset/icons/phone-icon.png"
+              alt=""
+            />
+            <span
+              class="text-[#EEECE8] text-[3.256vw] leading-[4.651vw] px-[5.581vw] py-[4.186vw]"
+              >677 644 9115 8246</span
+            >
+          </div>
+
+          <div class="w-full flex justify-center mb-[8.14vw]">
+            <img src="/asset/icons/facebook-icon.png" alt="" />
+            <img class="mx-6" src="/asset/icons/whatsapp-icon.png" alt="" />
+            <img src="/asset/icons/linkedin-icon.png" alt="" />
+          </div>
+
+          <div class="mb-[8.14vw]">
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >Home</a
+            >
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >About</a
+            >
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >Our Accreditation</a
+            >
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >Testimonial</a
+            >
+            <a
+              class="text-[#EEECE8] block mb-1 text-[4.651vw] leading-[5.581vw] text-center"
+              href="#"
+              >Contact Us</a
+            >
+          </div>
+
+          <p
+            class="text-[3.256vw] text-[#EEECE8] text-center leading-[5.116vw]"
+          >
+            M-space, 6D Mandai Estate#03-12, Singapore
+            729938(Office/Showroom/Workshop)
+          </p>
+        </div>
+        <div class="mx-auto py-[9.083vw]">
+          <div class="flex gap-2 items-center text-center justify-center">
+            <a
+              class="text-[#EEECE8] text-[3.256vw] text-center not-italic font-normal leading-[5.581vw]"
+            >
+              Renoexpert.com.sg @ 2024
+            </a>
+          </div>
+
+          <div class="text-center">
+            <span
+              class="text-[#EEECE8] text-[3.256vw] text-center not-italic font-normal leading-[5.581vw]"
+            >
+              All rights reserved
+            </span>
+          </div>
+          <div class="text-center">
+            <span
+              class="text-[#FF6D43] text-[3.256vw] not-italic font-normal leading-[5.581vw]"
+            >
+              Privacy & policy
+            </span>
+          </div>
+        </div>
+      </footer>
+
+      <!-- mobile footer section end -->
     </div>
 
     <!-- javascript file link  -->
