all section done

--- a/painting-service.html
+++ b/painting-service.html
@@ -491,6 +491,49 @@
       </section>
       <!-- reno work section end  -->
 
+      <!-- color selection section start  -->
+      <section class="colorSelection bg-black py-[4.333vw]">
+        <div class="container-general mx-auto">
+          <div
+            class="md:flex gap-[1.875vw] items-center pt-[4.5vw] pb-[4vw] md:py-[2.167vw]"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+              fill="none"
+              class="hidden md:block"
+            >
+              <circle cx="4" cy="4" r="4" fill="#FF6D43" />
+            </svg>
+            <h1
+              class="text-white text-center text-[6.512vw] md:text-[2.24vw] sm:text-[6.512vw]"
+            >
+              2,338 Colors For You
+            </h1>
+          </div>
+          <p
+            class="text-[#EEECE8] md:w-[30vw] text-[3.256vw] md:text-base font-normal md:leading-6 leading-[3.953vw] text-center md:text-left px-[13.953vw] md:px-0"
+          >
+            With 2,338 shades to choose from, we offer the most variety of
+            shades in Singapore!There’s surely one just for you – check out our
+            full range of colours now.
+          </p>
+
+          <div class="flex justify-center items-center">
+            <div class="bg-[#f4d8d1] w-64 rounded-md p-4">
+              <div
+                class="bg-black text-white text-sm font-medium px-2 py-1 rounded"
+              >
+                Vintage Vase
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- color selection section end -->
+
       <!-- free quote section start here  -->
       <section class="container-exceptional md:flex justify-between">
         <div class="flex items-center md:w-[41.667vw]">
