--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     style="display: none"
                   >
                     <a
-                      href="#"
+                      href="./painting-service.html"
                       class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                       >Painting</a
                     >
@@ -3310,7 +3310,7 @@
 
           <form>
             <div
-              class="md:mb-[1.042vw] flex flex-col md:flex-row gap-[3.023vw] md:gap-[0.625vw]"
+              class="md:mb-[1.042vw] flex flex-col md:flex-row gap-[3.023vw] md:gap-[0.625vw] px-[2.326vw] md:px-0"
             >
               <input
                 type="email"
@@ -3328,7 +3328,7 @@
                 class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
               />
             </div>
-            <div class="md:mb-[1.042vw]">
+            <div class="md:mb-[1.042vw] px-[2.326vw] md:px-0">
               <textarea
                 rows="4"
                 name="message"
@@ -3342,7 +3342,7 @@
             >
               <input
                 type="checkbox"
-                class="before:content[''] peer relative h-5 w-5 cursor-pointer appearance-none rounded-md border border-blue-gray-200 transition-all before:absolute before:top-2/4 before:left-2/4 before:block before:h-12 before:w-12 before:-translate-y-2/4 before:-translate-x-2/4 before:rounded-full before:bg-blue-gray-500 before:opacity-0 before:transition-opacity checked:border-[#FF6D43] checked:bg-[#FF6D43] checked:before:bg-[#FF6D43] hover:before:opacity-10"
+                class="before:content[''] peer relative h-4 w-5 md:h-5 md:w-5 cursor-pointer appearance-none rounded-md border border-blue-gray-200 transition-all before:absolute before:top-2/4 before:left-2/4 before:block before:h-12 before:w-12 before:-translate-y-2/4 before:-translate-x-2/4 before:rounded-full before:bg-blue-gray-500 before:opacity-0 before:transition-opacity checked:border-[#FF6D43] checked:bg-[#FF6D43] checked:before:bg-[#FF6D43] hover:before:opacity-10"
                 id="checkbox"
               />
               <p
@@ -3360,16 +3360,30 @@
                 <span>Drop a message</span>
 
                 <svg
-                  class="ml-[1.042vw]"
-                  width="44"
+                  class="ml-[1.042vw] hidden md:block"
+                  width="273"
                   height="7"
-                  viewBox="0 0 54 7"
+                  viewBox="0 0 273 7"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <path
-                    d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
-                    fill="#EEECE8"
+                    d="M268.5 2.525V0L273 3.03L268.5 6.06V3.535H0V2.525H268.5Z"
+                    fill="white"
+                  />
+                </svg>
+
+                <svg
+                  class="ml-[5.042vw] block md:hidden"
+                  width="126"
+                  height="7"
+                  viewBox="0 0 126 7"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M123.152 2.525V0L125.216 3.03L123.152 6.06V3.535H0V2.525H123.152Z"
+                    fill="white"
                   />
                 </svg>
               </a>
@@ -3431,7 +3445,9 @@
                   Services
                 </span>
               </div>
-              <a class="text-[#EEECE8] block mb-1 text-[1.042vw]" href="#"
+              <a
+                class="text-[#EEECE8] block mb-1 text-[1.042vw]"
+                href="./painting-service.html"
                 >Painting</a
               >
               <a class="text-[#EEECE8] block mb-1 text-[1.042vw]" href="#"
@@ -3467,7 +3483,9 @@
             </div>
           </div>
         </div>
-        <div class="w-full bg-[#D9D9D9] h-[0.003vw] mt-[8.333vw]"></div>
+        <div
+          class="w-full bg-[#D9D9D9] bg-opacity-30 h-[0.003vw] mt-[8.333vw]"
+        ></div>
         <div
           class="grid grid-cols-4 lg:w-[85%] md:w-[95%] mx-auto py-[2.083vw]"
         >
@@ -3511,7 +3529,7 @@
 
       <footer class="bg-black w-full box-border pt-[13.953vw] block md:hidden">
         <div
-          class="flex flex-col items-center justify-center border-[#BEB8AE] border-b-[0.1rem] pb-[9.535vw]"
+          class="flex flex-col items-center justify-center border-[#BEB8AE] border-opacity-30 border-b-[0.1rem] pb-[9.535vw]"
         >
           <div
             class="flex items-center border justify-center rounded-full cursor-pointer mb-[8.14vw]"
