--- a/painting-service.html
+++ b/painting-service.html
@@ -92,63 +92,6 @@
                     >
                       <a href="#">Electrical & Plumbing</a>
                     </li>
-                    <!-- <li class="rounded-sm relative px-3 py-1 hover:bg-gray-100">
-                      <button
-                        class="w-full text-left flex items-center outline-none focus:outline-none"
-                      >
-                        <span class="pr-1 flex-1">Langauges</span>
-                        <span class="mr-auto">
-                          <svg
-                            class="fill-current h-4 w-4
-                            transition duration-150 ease-in-out"
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 20 20"
-                          >
-                            <path
-                              d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                            />
-                          </svg>
-                        </span>
-                      </button>
-                      <ul
-                        class="bg-white border rounded-sm absolute top-0 right-0 
-                  transition duration-150 ease-in-out origin-top-left
-                  min-w-32
-                  "
-                      >
-                        <li class="px-3 py-1 hover:bg-gray-100">Javascript</li>
-                        <li class="rounded-sm relative px-3 py-1 hover:bg-gray-100">
-                          <button
-                            class="w-full text-left flex items-center outline-none focus:outline-none"
-                          >
-                            <span class="pr-1 flex-1">Python</span>
-                            <span class="mr-auto">
-                              <svg
-                                class="fill-current h-4 w-4
-                                transition duration-150 ease-in-out"
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 20 20"
-                              >
-                                <path
-                                  d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                                />
-                              </svg>
-                            </span>
-                          </button>
-                          <ul
-                            class="bg-white border rounded-sm absolute top-0 right-0 
-                      transition duration-150 ease-in-out origin-top-left
-                      min-w-32
-                      "
-                          >
-                            <li class="px-3 py-1 hover:bg-gray-100">2.7</li>
-                            <li class="px-3 py-1 hover:bg-gray-100">3+</li>
-                          </ul>
-                        </li>
-                        <li class="px-3 py-1 hover:bg-gray-100">Go</li>
-                        <li class="px-3 py-1 hover:bg-gray-100">Rust</li>
-                      </ul>
-                    </li> -->
                   </ul>
                 </div>
               </li>
@@ -292,7 +235,7 @@
           <div
             class="flex flex-col md:flex-row md:h-full md:w-full items-center justify-center md:justify-between"
           >
-            <div class="w-full md:w-[37.6875rem]">
+            <div class="w-full md:w-[37.6875rem] pt-[5.938vw]">
               <div class="md:flex gap-[1.875vw] items-start justify-start">
                 <div class="pt-6">
                   <svg
@@ -366,12 +309,40 @@
 
       <!-- why choose section start  -->
       <section
-        class="bg-white min-h[41.667vw] w-auto flex flex-col py-[15.116vw] md:pt-28 container-exceptional"
+        class="bg-white min-h[41.667vw] w-auto flex flex-col container-exceptional"
       >
         <div
           class="md:flex m-auto md:items-center text-center md:gap-[6.667vw]"
         >
-          <div class="l-side flex flex-col gap-[3.333vw]">
+          <div class="l-side flex flex-col gap-[3.333vw] md:w-[35.854vw]">
+            <div class="md:flex gap-[2.188vw] items-start justify-start">
+              <div class="pt-6">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="8"
+                  height="8"
+                  viewBox="0 0 8 8"
+                  fill="none"
+                  class="hidden md:block"
+                >
+                  <circle cx="4" cy="4" r="4" fill="#FF6D43" />
+                </svg>
+              </div>
+
+              <h1
+                class="text-[#291E18] text-center md:text-start items-center md:items-start text-[6.512vw] md:text-[2.25vw] md:leading-[2.7vw]"
+              >
+                What we deliver
+              </h1>
+            </div>
+            <p
+              class="text-[4.186vw] md:text-[0.833vw] text-center md:text-start text-[#291E18CC] mx-[10vw] md:mx-0"
+            >
+              Our skilled team ensures high-quality finishes at affordable
+              rates. We take great responsibility and care for every project we
+              handle.
+            </p>
+
             <!-- div 1 -->
             <div
               class="mx-[10vw] md:mx-0 flex gap-[0.469vw] justify-center items-center"
@@ -448,12 +419,10 @@
             </div>
             <!-- div 1 -->
           </div>
-          <div
-            class="r-side bg-[#c6e4ee] md:flex justify-end items-center w-full hidden"
-          >
+          <div class="r-side md:flex justify-end items-center w-full hidden">
             <img
-              class="px-[6.667vw] pt-[5vw] img-fluid"
-              src="./asset/img/man_image.png"
+              class=""
+              src="./asset/img/delivery_painting_img.png"
               alt="man image"
             />
           </div>
