--- a/index.html
+++ b/index.html
@@ -2551,7 +2551,7 @@
           class="bg-[#C6E4EE] w-full aspect-[430/438] md:w-[39.583vw] flex justify-center md:justify-end pt-[2.813vw]"
         >
           <img
-            class="w-[62.093vw] aspect-[267/374] md:w-[26.458vw] md:h-[36.771vw]"
+            class="w-[62.093vw] aspect-[267/374] md:w-[26.458vw] md:h-full"
             src="./asset/img/MDL 1.png"
             alt="man image"
           />
