--- a/painting-service.html
+++ b/painting-service.html
@@ -490,14 +490,140 @@
             full range of colours now.
           </p>
 
-          <div class="flex justify-center items-center">
-            <div class="bg-[#f4d8d1] w-64 rounded-md p-4">
+          <div
+            class="flex justify-center items-center gap-[2.708vw] my-[4.323vw]"
+          >
+            <!-- color 1  -->
+            <div
+              class="bg-[#f4d8d1] w-[12.656vw] rounded-md flex items-end pt-[9.115vw]"
+            >
               <div
-                class="bg-black text-white text-sm font-medium px-2 py-1 rounded"
+                class="bg-black text-white md:text-[0.938vw] font-medium px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
               >
                 Vintage Vase
+                <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
+                  <img
+                    class="img-fluid"
+                    src="./asset/img/date_pointer_bg.png"
+                    alt="date_pointer_bg"
+                  />
+                  <p
+                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                  >
+                    NP R 2386 P
+                  </p>
+                </div>
               </div>
             </div>
+            <!-- color 1  -->
+
+            <!-- color 2  -->
+            <div
+              class="bg-[#B6D7E3] w-[12.656vw] rounded-md flex items-end pt-[9.115vw]"
+            >
+              <div
+                class="bg-black text-white md:text-[0.938vw] font-medium px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
+              >
+                Smooth Sailing
+                <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
+                  <img
+                    class="img-fluid"
+                    src="./asset/img/date_pointer_bg.png"
+                    alt="date_pointer_bg"
+                  />
+                  <p
+                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                  >
+                    NP BGG 1565 P
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- color 2  -->
+
+            <!-- color 3  -->
+            <div
+              class="bg-[#93B79C] w-[12.656vw] rounded-md flex items-end pt-[9.115vw]"
+            >
+              <div
+                class="bg-black text-white md:text-[0.938vw] font-medium px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
+              >
+                Jasper Green
+                <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
+                  <img
+                    class="img-fluid"
+                    src="./asset/img/date_pointer_bg.png"
+                    alt="date_pointer_bg"
+                  />
+                  <p
+                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                  >
+                    NP BGG 1801 T
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- color 3  -->
+
+            <!-- color 4  -->
+            <div
+              class="bg-[#FEC680] w-[12.656vw] rounded-md flex items-end pt-[9.115vw]"
+            >
+              <div
+                class="bg-black text-white md:text-[0.938vw] font-medium px-[1.042vw] py-[1.083vw] rounded w-full m-[2px]"
+              >
+                Sun's Enchantment
+                <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
+                  <img
+                    class="img-fluid"
+                    src="./asset/img/date_pointer_bg.png"
+                    alt="date_pointer_bg"
+                  />
+                  <p
+                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-[1.25vw] leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
+                  >
+                    NP YO 1182 T
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- color 4 -->
+          </div>
+
+          <div>
+            <a
+              class="bg-[#FF6D43] py[14.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] leading-[4.651vw] rounded-full cursor-pointer flex items-center justify-between md:w-[39.063vw] mx-[10.233vw] md:mx-0 h-[12.791vw] md:h-[2.865vw]"
+            >
+              <span>Browse all colors</span>
+
+              <svg
+                class="hidden md:block"
+                width="273"
+                height="7"
+                viewBox="0 0 273 7"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M268.5 2.525V0L273 3.03L268.5 6.06V3.535H0V2.525H268.5Z"
+                  fill="white"
+                />
+              </svg>
+
+              <svg
+                class="ml-[5.042vw] block md:hidden"
+                width="126"
+                height="7"
+                viewBox="0 0 126 7"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M123.152 2.525V0L125.216 3.03L123.152 6.06V3.535H0V2.525H123.152Z"
+                  fill="white"
+                />
+              </svg>
+            </a>
           </div>
         </div>
       </section>
@@ -567,7 +693,7 @@
           class="bg-[#C6E4EE] w-[100vw] aspect-[430/438] md:w-[39.583vw] flex justify-center pt-[2.813vw]"
         >
           <img
-            class="w-[62.093vw] aspect-[267/374] md:w-[26.458vw] md:h-[36.771vw]"
+            class="w-[62.093vw] aspect-[267/374] md:w-[26.458vw] md:h-full"
             src="./asset/img/MDL 1.png"
             alt="man image"
           />
